idf_component_register(
    SRCS
        "Slang/core/src/buffer_core.c"
        "Slang/core/src/function.c"
        "Slang/core/src/interpreter.c"
        "Slang/core/src/parser.c"
        "Slang/core/src/rack.c"
        "Slang/core/src/tokenizer.c"
        "Slang/core/src/tools.c"
        "Slang/modules/data/src/binaryData.c"
        "Slang/modules/envelope/src/envelope.c"
        "Slang/modules/envelope/src/linenvelope.c"
        "Slang/modules/filters/src/lowpassfilter.c"
        "Slang/modules/oscillators/src/oscillator.c"
        "Slang/modules/oscillators/src/sawtooth.c"
        "Slang/modules/oscillators/src/sine.c"
        "Slang/modules/oscillators/src/square.c"
        "Slang/modules/oscillators/src/terrain.c"
        "Slang/modules/oscillators/src/triangle.c"
        "Slang/modules/oscillators/src/wavetable.c"
        "Slang/modules/sample-source/src/sample_source.c"
        "Slang/modules/stepsequencer/src/stepsequencer.c"
    INCLUDE_DIRS
        "Slang/core/include"
        "Slang"
        "Slang/modules"
        "Slang/modules/data/include"
        "Slang/modules/envelope/include"
        "Slang/modules/filters/include"
        "Slang/modules/modifier/include"
        "Slang/modules/oscillators/include"
        "Slang/modules/sample-source/include"
        "Slang/modules/stepsequencer/include"
)